Remove deprecated cast to long